force-app/main/default/objects/NorlysNow_Case__c/NorlysNow_Case__c.object-meta.xml
<CustomObject>
    <label>NorlysNow Case</label>
    <nameField>
        <displayFormat>NN-{000000000}</displayFormat>
        <label>NorlysNow Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NorlysNow Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>