force-app/main/default/objects/NorlysNow_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NorlysNow Cases</relationshipLabel>
    <relationshipName>NorlysNow_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>