force-app/main/default/objects/NorlysNow_Case__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
                <default>true</default>
                <label>Customer Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>