force-app/main/default/objects/NorlysNow_Case__c/fields/NorlysNow_Id__c.field-meta.xml
<CustomField>
    <fullName>NorlysNow_Id__c</fullName>
    <externalId>true</externalId>
    <label>NorlysNow Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>