force-app/main/default/objects/NorlysNow_Case__c/fields/OneWorkflow_Id__c.field-meta.xml
<CustomField>
    <fullName>OneWorkflow_Id__c</fullName>
    <description>Link between OneWorkFlow__c record and the NorlysNow_Case__c Record</description>
    <label>OneWorkflow Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>