force-app/main/default/objects/NorlysNow_Case__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
                <default>true</default>
                <label>Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>