force-app/main/default/objects/NorlysNow_Case__c/fields/Reported_On__c.field-meta.xml
<CustomField>
    <fullName>Reported_On__c</fullName>
    <description>Date with the date of the creation of the parent case</description>
    <formula>Parent_Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported On</label>
    <type>DateTime</type>
</CustomField>