force-app/main/default/objects/NorlysNow_Case__c/fields/Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Request_Source__c</fullName>
    <label>Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Care</fullName>
                <default>true</default>
                <label>Customer Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>