force-app/main/default/objects/NorlysNow_Case__c/fields/Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_Message__c</fullName>
    <label>Sync Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>