force-app/main/default/objects/NorlysNow_Case__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <description>NorlysNow status delivery</description>
    <inlineHelpText>Please set Sync Status to &quot;Pending&quot; If you need to resend the NorlysNow case</inlineHelpText>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>