force-app/main/default/objects/NorlysNow_Case__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSM</fullName>
                <default>true</default>
                <label>GSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>