force-app/main/default/objects/NorlysNow_Case__c/fields/Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Type__c</fullName>
    <label>Technology Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Services</fullName>
                <default>true</default>
                <label>Mobile Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>