force-app/main/default/objects/NorlysNow_Case__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSS</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
                <default>true</default>
                <label>Voice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>